--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="inv-text-camp"></div>
             <div class="img-welcome">
-                <img src="images/danilo.jpeg" alt="">
+                <img src="images/danilo.jpg" alt="">
             </div>
         </div>
 
